﻿HISTORY

  Version 5.0.6  2012-06-
  ------------------------------------------------------------------------------
    - GUI debugging output was forced to be saved in the log file
    - added "View change log", "View translation report" and
      "Submit current translation" items to language menu
    - the following translations were updated:

      Arabic, Portuguese, Italian, Spanish (ES), Hebrew, Serbian, Javanese,
      Indonesian (Bahasa Indonesia), Polish
      
    - Internals: winx_to_utf8 routine added to zenwinx library
    - winx_dbg_print routine enhanced: $NS and $LE magic sequences support added
    - udefrag_dbg_print routine added to udefrag library
    - WgxSetDbgPrintHandler routine added to wgx library


  Version 5.0.5  2012-05-05
  ------------------------------------------------------------------------------
    - repair drives action was added to the GUI menu
    - displaying the cluster map legend from the help menu was added
    - cluster map scaling was forced to be more accurate
    - GUI options verification was added
    - a bug causing "wrong map detected" error was fixed
    - ability to analyze, optimize and quick optimize drive from
      Explorer context menu added
    - relative log paths support added to both GUI and console interface
    - support of Unicode strings added to GUI options
    - encoding of language packs changed to UTF-8
    - status bar MFT string removed from translations, since it is nearly
      impossible to translate due to space issues
    - handbook section about bug reporting reworked to include detailed steps
    - the following translations were updated:

      Hebrew, Bosanski

    - Internals: make-mingw-projects.lua script added
    - WgxCreateProcess and WgxCreateThread routines added to wgx library
    - winx_flush_dbg_log routine added to zenwinx library
    - udefrag_flush_dbg_log routine added to udefrag library
    - os.setenv routine added to Lua library